--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             Financial Advisor & Linguist
           </p>
           <p id="link">👉 habibullahfedaee@gmail.com</p>
-          <p id="link">👉 www.linkedin.com/in/habibullah-fedaee</p>
+          <a href="https://www.linkedin.com/in/habibullah-fedaee"
+            ><p id="link">👉 www.linkedin.com/in/habibullah-fedaee</p></a
+          >
         </div>
       </section>
       <section id="section--page">
