--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <div class="line-break"></div>
         <div class="card-work-history">
           <br />
-          <strong>Quality Automation Engineer</strong>
+          <strong>Quality Assurance Automation Engineer</strong>
           <p>FROM August 2020, TO present</p>
           <p>COMPANY: Delta Airlines, LOCATION: Georgia, Atlanta (Remote)</p>
           <ul>
